@@ -1,9 +1,6 @@
 NAME
     App::Uni - Command-line utility to grep UnicodeData.txt
 
-VERSION
-    This document describes version 6 of App::Uni, released June 19, 2011.
-
 SYNOPSIS
         $ uni smiling face
         263A ☺ WHITE SMILING FACE
@@ -11,6 +8,10 @@ SYNOPSIS
 
         $ uni ☺
         263A ☺ WHITE SMILING FACE
+
+        # Only on Perl 5.14+
+        $ uni wry
+        1F63C 😼 CAT FACE WITH WRY SMILE
 
 DESCRIPTION
     This module installs a simple program, uni, that helps grepping through
@@ -22,6 +23,11 @@ DESCRIPTION
 
     If the argument is a single non-ASCII character, then the character
     itself is printed instead.
+
+NOTES
+    If you'd like to search for Emojis in Unicode 6.0, please upgrade to
+    Perl 5.14! See <http://www.perlbrew.pl> for one possible way to build a
+    local Perl 5.14.
 
 ACKNOWLEDGEMENTS
     This is a re-implementation of a same-named program Larry copied to me,
